<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/floral_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/floral_white"
        tools:context=".ui.activity.MovieFormActivity">

        <ImageView
            android:id="@+id/activity_movie_form_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imagem_padrao"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_movie_form_name_textImputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_movie_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/activity_movie_form_genre_first_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/genres"
            app:layout_constraintEnd_toStartOf="@+id/activity_movie_form_genre_second_spinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_name_textImputLayout" />

        <Spinner
            android:id="@+id/activity_movie_form_genre_second_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_movie_form_genre_first_spinner"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_name_textImputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_movie_form_year_textImputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_genre_first_spinner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_movie_form_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_movie_form_duration_textImputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_year_textImputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_movie_form_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/duracao_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_movie_form_description_textImputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_duration_textImputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_movie_form_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sinopse"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_movie_form_review_textImputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_description_textImputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_movie_form_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review"
                android:inputType="textMultiLine"  />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_movie_form_rating_textImputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_review_textImputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_movie_form_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nota_hint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_movie_form_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_movie_form_rating_textImputLayout"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>